enhance: enable `StaysOpenOnClick` for filter mode in graph context menu item
Signed-off-by: leo <longshuang@msn.cn>

--- a/src/Resources/Styles.axaml
+++ b/src/Resources/Styles.axaml
@@ -955,6 +955,7 @@
 
   <Style Selector="MenuItem.filter_mode_switcher">
     <Setter Property="Height" Value="48"/>
+    <Setter Property="StaysOpenOnClick" Value="True"/>
     
     <Style Selector="^:selected">
       <Style Selector="^ /template/ Border#PART_LayoutRoot">
